// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`extends-bound.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
// @flow

type F = <T extends string>(t: T) => T;

=====================================output=====================================
// @flow

type F = <T extends string>(t: T) => T;

================================================================================
`;

exports[`issue-5283.js format 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================

let f: <A>((
  (?A) => B
)) => B;


export const testFunctionOnOptionsAsArgument: <T1,a>(?a, ((?a) => T1)) => T1 = function _(Arg1, Arg2) { const result = TypesBS.testFunctionOnOptionsAsArgument((Arg1 == null ? undefined : Arg1), Arg2); return result };

=====================================output=====================================
let f: <A>(((?A) => B)) => B;

export const testFunctionOnOptionsAsArgument: <T1, a>(?a, ((?a) => T1)) => T1 =
  function _(Arg1, Arg2) {
    const result = TypesBS.testFunctionOnOptionsAsArgument(
      Arg1 == null ? undefined : Arg1,
      Arg2,
    );
    return result;
  };

================================================================================
`;
